fix: Get rid of the gray that fills the dark mode toggle in certain instances and adjust spacing for navbar and contact bar

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ footer {
 @media (max-width: 520px) {
   main,
   footer {
-    padding: 62px 24px 100px;
+    padding: 80px 24px 100px;
   }
 }
 
@@ -262,7 +262,7 @@ nav .link:focus-visible {
   text-decoration: none;
 }
 
-nav a.active {
+.navbar nav a.active {
   color: var(--primary-text-color);
   text-decoration: underline;
   text-underline-offset: 0.5rem;
